# flask-project-83

./: .env  .gitignore  AGENTS.md  Makefile  README.md  build.sh  pyproject.toml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: index.html
